<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="40dp"
        android:onClick="ok"
        android:text="@android:string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="303dp"
        android:layout_height="115dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="268dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:onClick="cancel"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/type_product"
        android:layout_width="129dp"
        android:layout_height="167dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <RadioButton
            android:id="@+id/mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mask"/>

        <RadioButton
            android:id="@+id/tablet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tablet"/>

        <RadioButton
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>

        <RadioButton
            android:id="@+id/pen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pen"/>

        <RadioButton
            android:id="@+id/bread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bread"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/company"
        android:layout_width="144dp"
        android:layout_height="146dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <RadioButton
            android:id="@+id/novus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novus"
            />

        <RadioButton
            android:id="@+id/silpo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silpo" />

        <RadioButton
            android:id="@+id/rozetka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rozetka" />

        <RadioButton
            android:id="@+id/samsung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/samsung" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>